--- a/index.html
+++ b/index.html
@@ -10,33 +10,33 @@
     <div id="main-container">
         <div id="result"></div>
         <div id="first-row">
-            <div id="all-clear">AC</div>
-            <div id="plus-minus">+-</div>
-            <div id="percentage">%</div>
-            <div id="divide" class="operator">/</div>        
+            <div id="all-clear" class="button">AC</div>
+            <div id="plus-minus" class="button">+-</div>
+            <div id="percentage" class="button">%</div>
+            <div id="divide" class="button operator">/</div>        
         </div>
         <div id="second-row">
-            <div id="7" class="number">7</div>
-            <div id="8" class="number">8</div>
-            <div id="9" class="number">9</div>
-            <div id="multiply" class="operator">x</div>        
+            <div id="7" class="button number">7</div>
+            <div id="8" class="button number">8</div>
+            <div id="9" class="button number">9</div>
+            <div id="multiply" class="button operator">x</div>        
         </div>
         <div id="third-row">
-            <div id="4" class="number">4</div>
-            <div id="5" class="number">5</div>
-            <div id="6" class="number">6</div>
-            <div id="minus" class="operator">-</div>        
+            <div id="4" class="button number">4</div>
+            <div id="5" class="button number">5</div>
+            <div id="6" class="button number">6</div>
+            <div id="minus" class="button operator">-</div>        
         </div>
         <div id="fourth-row">
-            <div id="1" class="number">1</div>
-            <div id="2" class="number">2</div>
-            <div id="3" class="number">3</div>
-            <div id="plus" class="operator">+</div>        
+            <div id="1" class="button number">1</div>
+            <div id="2" class="button number">2</div>
+            <div id="3" class="button number">3</div>
+            <div id="plus" class="button operator">+</div>        
         </div>
         <div id="fifth-row">
-            <div id="0" class="number">0</div>
-            <div id="decimal">.</div>
-            <div id="equals">=</div>      
+            <div id="0" class="button number">0</div>
+            <div id="decimal" class="button">.</div>
+            <div id="equals" class="button">=</div>      
         </div>
     </div>
     <script src="app.js"></script>
